add some sample figures and some material

--- a/bib.bib
+++ b/bib.bib
@@ -69,7 +69,7 @@
 	urldate = {2017-09-25},
 	author = {Nelson, Derek R.},
 	year = {2005},
-	keywords = {Constant Velocity, Dubins, Experiment, Lyapunov, Path Following, Singularity, Sliding Mode, Vector Field, Wind},
+	keywords = {Path Following, Lyapunov, Dubins, Vector Field, Wind, Experiment, Constant Velocity, Sliding Mode, Singularity},
 	annote = {
 Vector fields serve as course commands to the MAV
 
@@ -359,7 +359,7 @@ The article is very math heavy and difficult to understand. I may have to come b
 	publisher = {IEEE},
 	author = {Loizou, Savvas G. and Tanner, Herbert G. and Kumar, Vijay and Kyriakopoulos, Kostas J.},
 	year = {2003},
-	keywords = {Navigation Functions, Obstacle, Potential Field, Vector Field},
+	keywords = {Potential Field, Obstacle, Navigation Functions, Vector Field},
 	pages = {2926--2931},
 	annote = {
 This work is motivated by the need to redesign the potential field each time an environment change is detected.
@@ -814,7 +814,7 @@ Proposition 1 looks very familiar to Goncalves work for generating vector fields
 
 @misc{noauthor_potential_nodate,
 	title = {Potential {Field} {Methods} and their inherent limitions for morbile robot navigation.pdf},
-	keywords = {Histogram, Potential Field, Obstacle},
+	keywords = {Histogram, Obstacle, Potential Field},
 	file = {Potential Field Methods and their inherent limitions for morbile robot navigation.pdf:C\:\\Users\\gc117711\\Zotero\\storage\\TRAGE9GA\\Potential Field Methods and their inherent limitions for morbile robot navigation.pdf:application/pdf}
 }
 
@@ -892,7 +892,7 @@ Vector field stretched / Transformed into an elliptical or pill shape
 	journal = {The international journal of robotics research},
 	author = {Khatib, Oussama},
 	year = {1986},
-	keywords = {Potential Field, Holonomic, Decay Function, Local Minima},
+	keywords = {Decay Function, Holonomic, Local Minima, Potential Field},
 	pages = {90--98},
 	annote = {
 Traditionally obstacle avoidance has been a high level controls problem (Esentially, don't even go in that area)
@@ -996,7 +996,7 @@ Local minima can occur in the resultant potential field...this can lead to a sta
 
 @misc{noauthor_exact_nodate,
 	title = {Exact {Robot} {Navigation} {Using} {Artificial} {Potential} {Functions}.pdf},
-	keywords = {Lagrangian, Navigation Functions, Potential Field},
+	keywords = {Potential Field, Navigation Functions, Lagrangian},
 	annote = {
 Traditional robot navigation through an environment is done in 3 distinct and separate stages
 
@@ -1011,4 +1011,51 @@ A controller is designed to follow the reference trajectory as closely as possib
 Potential field approach combines all of the three methods into a single step
 },
 	file = {Exact Robot Navigation Using Artificial Potential Functions.pdf:C\:\\Users\\gc117711\\Zotero\\storage\\4JXC56VJ\\Exact Robot Navigation Using Artificial Potential Functions.pdf:application/pdf}
+}
+
+@book{beard_small_2012,
+	address = {Princeton, N.J},
+	title = {Small unmanned aircraft: theory and practice},
+	isbn = {978-0-691-14921-9},
+	shorttitle = {Small unmanned aircraft},
+	publisher = {Princeton University Press},
+	author = {Beard, Randal W. and McLain, Timothy W.},
+	year = {2012},
+	note = {OCLC: ocn724663112},
+	keywords = {Automatic control, Control systems, Drone aircraft, Guidance systems (Flight)},
+	annote = {Includes bibliographical references (p. [291]-298) and index},
+	file = {Small Unmanned Aircraft.pdf:C\:\\Users\\gc117711\\Zotero\\storage\\NWPKVMUK\\Small Unmanned Aircraft.pdf:application/pdf}
+}
+
+@article{oliveira_moving_2016,
+	title = {Moving {Path} {Following} for {Unmanned} {Aerial} {Vehicles} {With} {Applications} to {Single} and {Multiple} {Target} {Tracking} {Problems}},
+	volume = {32},
+	issn = {1552-3098, 1941-0468},
+	url = {http://ieeexplore.ieee.org/document/7553466/},
+	doi = {10.1109/TRO.2016.2593044},
+	number = {5},
+	urldate = {2017-09-30},
+	journal = {IEEE Transactions on Robotics},
+	author = {Oliveira, Tiago and Aguiar, A. Pedro and Encarnacao, Pedro},
+	month = oct,
+	year = {2016},
+	pages = {1062--1078},
+	file = {Moving Path following for Unmanned Aerial Vehicles with Applications to Single and Multiple Target Tracking Problems.pdf:C\:\\Users\\gc117711\\Zotero\\storage\\RBZ59E45\\Moving Path following for Unmanned Aerial Vehicles with Applications to Single and Multiple Target Tracking Problems.pdf:application/pdf}
+}
+
+@article{sujit_unmanned_2014,
+	title = {Unmanned {Aerial} {Vehicle} {Path} {Following}: {A} {Survey} and {Analysis} of {Algorithms} for {Fixed}-{Wing} {Unmanned} {Aerial} {Vehicless}},
+	volume = {34},
+	issn = {1066-033X},
+	shorttitle = {Unmanned {Aerial} {Vehicle} {Path} {Following}},
+	url = {http://ieeexplore.ieee.org/document/6712082/},
+	doi = {10.1109/MCS.2013.2287568},
+	number = {1},
+	urldate = {2017-09-30},
+	journal = {IEEE Control Systems},
+	author = {Sujit, P.B. and Saripalli, Srikanth and Sousa, Joao Borges},
+	month = feb,
+	year = {2014},
+	pages = {42--59},
+	file = {Unmanned Aerial Vehicle Path Following - A survey and analysis of algorithms for fixed wing unmanned aerial vehicles.pdf:C\:\\Users\\gc117711\\Zotero\\storage\\NRRNRNUZ\\Unmanned Aerial Vehicle Path Following - A survey and analysis of algorithms for fixed wing unmanned aerial vehicles.pdf:application/pdf}
 }
